added ability to add a plan and associations between the models

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Email</th>
     <th>Username</th>
     <th>Stripe token</th>
     <th></th>
@@ -11,6 +12,7 @@
 
 <% @users.each do |user| %>
   <tr>
+    <td><%= user.email %></td>
     <td><%= user.username %></td>
     <td><%= user.stripe_token %></td>
     <td><%= link_to 'Show', user %></td>
