--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,15 @@
 <body>
 
 <div>
-  <%= link_to :form, form_path %> | <%= link_to :users, users_path %>
+  <%= link_to :plans, plans_path %> |
+  <%= link_to :form, form_path %> |
+  <%= link_to :users, users_path %> |
+  <%= link_to :new_account, new_user_registration_path %> |
+  <%= link_to :login, new_user_session_path %> |
+  <% if user_signed_in? %>
+    Welcome <%= current_user.email %> |
+    <%= link_to :logout, destroy_user_session_path, method: :delete %>
+  <% end %>
 </div>
 
 <p class="notice"><%= notice %></p>
