--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,8 +4,8 @@
   <tr>
     <th>Email</th>
     <th>Username</th>
-    <th>Stripe token</th>
-    <th></th>
+    <th>Subscription</th>
+    <th>Stripe customer ID</th>
     <th></th>
     <th></th>
   </tr>
@@ -14,7 +14,8 @@
   <tr>
     <td><%= user.email %></td>
     <td><%= user.username %></td>
-    <td><%= user.stripe_token %></td>
+    <td><%= user.subscription.plan.name %></td>
+    <td><%= user.subscription.stripe_customer_id %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, confirm: 'Are you sure?', method: :delete %></td>
