Add subscription scaffolding for controller and test
- test out saving things like trial_end_date and the stripe customer id

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <body>
 
 <div>
+  <%= link_to :subscriptions, subscriptions_path %>
   <%= link_to :plans, plans_path %> |
   <%= link_to :form, form_path %> |
   <%= link_to :users, users_path %> |
